# gaussian-splatting-IAUNI

./: .dockerignore  .gitignore  Dockerfile  README.md  datasets_gen.py  docker-compose.yml  pyproject.toml  render.py  train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
scene/: __init__.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
scene/.ipynb_checkpoints/: gaussian_model-checkpoint.py
utils/: image_utils.py  loss_utils.py
