[project]
name = "gaussian-splatting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["transformers>=4.52.4",

]  # Instalación manual por grupos

[project.optional-dependencies]
torch = [
    "torch",
    "torchaudio",
    "torchvision"
]
base = [
    "joblib>=1.4.2",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1",
    "setuptools>=79.0.0",
    "tqdm>=4.67.1"
]
submodules = [
    "diff-gaussian-rasterization",
    "fused-ssim",
    "simple-knn"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []


[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
diff-gaussian-rasterization = { path = "submodules/diff-gaussian-rasterization" }
simple-knn = { path = "submodules/simple-knn" }
fused-ssim = { path = "submodules/fused-ssim" }


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


